# exception

./: Cargo.toml  Teasing.md
alright/: Cargo.toml
alright-common/: Cargo.toml
alright-common/src/: lib.rs
alright-common/src/modules/: commonly_exceptions.rs
alright-derive/src/: lib.rs  utils.rs
alright-little_try/: Cargo.toml
alright-little_try/src/: lib.rs  main.rs
alright-little_try/src/first_try/: define_your_error.rs  mod.rs  quick_define_error.rs  quick_define_more_error.rs
alright/src/: lib.rs
alright/src/modules/: mod.rs  traits.rs  utils.rs
alright/src/modules/commonly/: mod.rs
alright/src/modules/implements/: base_exception.rs  erased_exception.rs  erased_property.rs  mod.rs  property.rs  train.rs
alright/src/modules/traits/: commonly.rs  exception_utils.rs  mod.rs  template_display.rs  transform.rs
alright/src/modules/types/: erased_exception.rs  erased_property.rs  exception.rs  mod.rs  property.rs  train.rs
exception/: Cargo.toml
exception/src/: main.rs
exception/src/modules/: mod.rs
src/: main.rs
src/modules/: exception.rs  property.rs  traits.rs
