[workspace]
members = ["alright-derive", "alright", "alright-common"]
exclude = ["alright-little_try"]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.89.0"
homepage = "https://github.com/starwindv/alright"
description = "A Safe-running, error-free, error-transmission without loss and 0 `unsafe block` error handling system\n - Aiming to provide a better development experience for the application layer."
