[package]
name = "alright-little_try"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
alright-common = { version = "0.1.1", path = "../alright-common"}
alright-derive = { version = "0.1.1", path = "../alright-derive"}
alright = { version = "0.1.1", path = "../alright"}
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
